--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
-
-<html lang="en">
-  <head>
- <meta http-equiv="refresh" content="0; url=
-https://vcadre.com/?ysclid=m2it02l9ns10856468
-   
-   
-   ">
-   </head>
-  <body>
-   
-  </body>
+<!DOCTYPE html>
+<html>
+<head>
+    <script>
+    const urls = [
+        'https://yandex.ru',
+        'https://google.com',
+        'https://fb.com'
+    ];
+    document.write('<meta http-equiv="refresh" content="0; url=' + urls[Math.floor(Math.random() * urls.length)] + '">');
+    </script>
+</head>
 </html>
