--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta http-equiv="refresh" content="0; url=tg://resolve?domain=Meet_Cute_Bot">
+    <meta http-equiv="refresh" content="0; url=https://t.me/Meet_Cute_Bot">
+</head>
+<body>
+<!-- множественный редирект на несколько урлов -->
     <script>
     const urls = [
         'https://t.me/Meet_Cute_Bot',
@@ -9,5 +14,6 @@
     ];
     document.write('<meta http-equiv="refresh" content="0; url=' + urls[Math.floor(Math.random() * urls.length)] + '">');
     </script>
-</head>
+    <!-- конец кода -->
+</body>
 </html>
