--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="refresh" content="0; url=tg://resolve?domain=Meet_Cute_Bot">
-    <meta http-equiv="refresh" content="0; url=https://t.me/Meet_Cute_Bot">
+    <meta http-equiv="refresh" content="0; url=https://x4g2mrr.datedateonline.com/gcupda3">
 </head>
 <body>
 <!-- множественный редирект на несколько урлов -->
